--- a/AlliantTestProject/Areas/CustomerItems/Pages/CustomerItemPage.razor
+++ b/AlliantTestProject/Areas/CustomerItems/Pages/CustomerItemPage.razor
@@ -7,60 +7,67 @@
 @inject CustomerService CustomerService
 @inject ItemsService ItemsService
 
-@if (CustomerItemId == null)
-{
-    <h1>Create a new Customer Item</h1>
-}
-else
-{
-    <h1>Edit Customer Item</h1>
-}
+<AuthorizeView>
+    <Authorized>
+        @if (CustomerItemId == null)
+        {
+            <h1>Create a new Customer Item</h1>
+        }
+        else
+        {
+            <h1>Edit Customer Item</h1>
+        }
 
-<EditForm Model=customerItem OnValidSubmit="OnSave">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
-    @if (isError)
-    {
-        <ul class="validation-errors">
-            <li class="validation-message">@errorMsg</li>
-        </ul>
-    }
-    <p>Customer Number: @customer.CustomerNumber</p>
-    <p>Customer Name: @customer.CustomerName</p>
-    <div class="form-row">
-        <div class="form-group col-sm-2">
-            <label for="itemId">Item</label>
-            <select id="itemId" @onchange="HandleSelectedItemOnHange">
-                <option>Select an Item</option>
-                @foreach (var item in items)
-                {
-                    <option value="@item.ItemId">@item.ItemNumber - @item.Description</option>
-                }
-            </select>
-        </div>
-        <div class="form-group col-sm-4">
-            <label for="quantity">Quantity</label>
-            <InputNumber id="quantity" class="form-control" placeholder="0" @bind-Value="customerItem.Quantity" />
-        </div>
-    </div>
-    <div class="form-group col-sm-4">
-        <label for="price">Price</label>
-        <InputNumber id="price" class="form-control" placeholder="0.00" @bind-Value="customerItem.Price" />
-    </div>
-    <div class="form-group col-sm-4">
-        <div class="form-check">
-            <InputCheckbox id="isActive" class="form-check-input" type="checkbox" @bind-Value="customerItem.IsActive" />
-            <label class="form-check-label" for="isActive">
-                Active
-            </label>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary">@btnText</button>
-    @if (CustomerItemId != null)
-    {
-        <button type="button" class="btn btn-danger" @onclick="DeleteCustomerItem">Delete Customer</button>
-    }
-</EditForm>
+        <EditForm Context="formContext" Model=customerItem OnValidSubmit="OnSave">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            @if (isError)
+            {
+                <ul class="validation-errors">
+                    <li class="validation-message">@errorMsg</li>
+                </ul>
+            }
+            <p>Customer Number: @customer.CustomerNumber</p>
+            <p>Customer Name: @customer.CustomerName</p>
+            <div class="form-row">
+                <div class="form-group col-sm-2">
+                    <label for="itemId">Item</label>
+                    <select id="itemId" @onchange="HandleSelectedItemOnHange">
+                        <option>Select an Item</option>
+                        @foreach (var item in items)
+                        {
+                            <option value="@item.ItemId">@item.ItemNumber - @item.Description</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group col-sm-4">
+                    <label for="quantity">Quantity</label>
+                    <InputNumber id="quantity" class="form-control" placeholder="0" @bind-Value="customerItem.Quantity" />
+                </div>
+            </div>
+            <div class="form-group col-sm-4">
+                <label for="price">Price</label>
+                <InputNumber id="price" class="form-control" placeholder="0.00" @bind-Value="customerItem.Price" />
+            </div>
+            <div class="form-group col-sm-4">
+                <div class="form-check">
+                    <InputCheckbox id="isActive" class="form-check-input" type="checkbox" @bind-Value="customerItem.IsActive" />
+                    <label class="form-check-label" for="isActive">
+                        Active
+                    </label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">@btnText</button>
+            @if (CustomerItemId != null)
+            {
+                <button type="button" class="btn btn-danger" @onclick="DeleteCustomerItem">Delete Customer</button>
+            }
+        </EditForm>
+    </Authorized>
+    <NotAuthorized>
+        <NotAuthorizedBanner />
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
     [Parameter] public int? CustomerItemId { get; set; }
@@ -100,7 +107,7 @@ else
     {
         try
         {
-            var selectedItem = items.Find(i => i.ItemId == Int32.Parse( e.Value.ToString()));
+            var selectedItem = items.Find(i => i.ItemId == Int32.Parse(e.Value.ToString()));
             if (selectedItem != null)
             {
                 customerItem.ItemId = selectedItem.ItemId;
@@ -110,7 +117,7 @@ else
         }
         catch (Exception ex)
         {
-            
+
         }
     }
 
