--- a/AlliantTestProject/Areas/CustomerItems/Pages/CustomerItems.razor
+++ b/AlliantTestProject/Areas/CustomerItems/Pages/CustomerItems.razor
@@ -100,9 +100,7 @@
 
     </Authorized>
     <NotAuthorized>
-        <div class="alert alert-secondary" role="alert">
-            You have to LogIn to see this content.
-        </div>
+        <NotAuthorizedBanner />
     </NotAuthorized>
 </AuthorizeView>
 
