--- a/AlliantTestProject/Areas/Customers/Pages/Customers.razor
+++ b/AlliantTestProject/Areas/Customers/Pages/Customers.razor
@@ -57,9 +57,7 @@
         
     </Authorized>
     <NotAuthorized>
-        <div class="alert alert-secondary" role="alert">
-            You have to LogIn to see this content.
-        </div>
+        <NotAuthorizedBanner />
     </NotAuthorized>
 </AuthorizeView>
 
