--- a/AlliantTestProject/Areas/Items/Pages/Items.razor
+++ b/AlliantTestProject/Areas/Items/Pages/Items.razor
@@ -55,9 +55,7 @@
 
     </Authorized>
     <NotAuthorized>
-        <div class="alert alert-secondary" role="alert">
-            You have to LogIn to see this content.
-        </div>
+        <NotAuthorizedBanner />
     </NotAuthorized>
 </AuthorizeView>
 
