--- a/AlliantTestProject/Areas/Reports/Pages/Reports.razor
+++ b/AlliantTestProject/Areas/Reports/Pages/Reports.razor
@@ -12,9 +12,7 @@
         </div>
     </Authorized>
     <NotAuthorized>
-        <div class="alert alert-secondary" role="alert">
-            You have to LogIn to see this content.
-        </div>
+        <NotAuthorizedBanner />
     </NotAuthorized>
 </AuthorizeView>
 @code {
